# Callosum

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml
callosum/: README.md  __init__.py  __main__.py  antigravity_miner.py  backlog.py  blueprints.py  cli.py  closet.py  config.py  convo_miner.py  entity_detector.py  entity_registry.py  hallways.py  isolation.py  knowledge_graph.py  layers.py  maintain.py  mcp_server.py  miner.py  normalize.py  onboarding.py  palace_graph.py  room_detector_local.py  scheduler.py  searcher.py  spellcheck.py  split_mega_files.py  staleness.py  tray_app.py  version.py  watcher.py  wizard.py
config_templates/: identity.txt  wing_config.json
hooks/: README.md  precompress_hook.py  save_hook.py
tests/: conftest.py  test_backlog.py  test_blueprints.py  test_config.py  test_convo_miner.py  test_dynamics.py  test_hallways.py  test_isolation.py  test_maintain.py  test_mcp_server.py  test_miner.py  test_normalize.py  test_palace_graph.py  test_searcher.py  test_split_mega_files.py  test_staleness.py  test_version_consistency.py  test_watcher.py
