[project]
name = "callosum"
version = "0.1.0"
description = "The bridge between minds — shared AI memory for multi-model workflows. Windows-first. Local-only. No API key required."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb", "mcp",
    "vector-database", "claude", "gemini", "embeddings",
    "multi-model", "windows",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "chromadb>=0.4.0,<1",
    "pyyaml>=6.0",
    "pystray>=0.19.0",
    "Pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/Apollo-Approach/Callosum"
Repository = "https://github.com/Apollo-Approach/Callosum"
"Bug Tracker" = "https://github.com/Apollo-Approach/Callosum/issues"
"Forked From" = "https://github.com/milla-jovovich/mempalace"

[project.scripts]
callosum = "callosum:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["callosum"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
